--- a/public/style.css
+++ b/public/style.css
@@ -48,6 +48,7 @@ header {
     font-size: 20px;  
     margin-top: 10px;
     padding-left: 10px;
+    overflow: scroll;
 }
 
 #userImages {
@@ -58,6 +59,7 @@ header {
     margin-top: 10px;
     margin-left: 10px;
     padding-left: 10px;
+    overflow: scroll;
     /* float: left;  */
 }
 
@@ -68,6 +70,28 @@ header {
     font-size: 20px;  
     margin-left: 10px;
     padding-left: 10px;
+    /* overflow: scroll; */
+}
+
+#journalNotes {
+    border: solid 3px;
+    width: 600px;
+    height: 600px;
+    font-size: 20px;  
+    margin-top: 10px;
+    padding-left: 10px;
+    overflow: scroll;
+}
+
+#nutritionImages {
+    border: solid 3px;
+    width: 600px;
+    height: auto;
+    font-size: 20px;  
+    margin-top: 10px;
+    margin-left: 10px;
+    padding-left: 10px;
+    overflow: scroll;
 }
 
 #chart {
